--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -16,6 +16,7 @@
 \usepackage{wasysym}
 \usepackage{extarrows}
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
+\definecolor{light-gray}{gray}{0.9}
 \usepackage{mathpazo}
 \usepackage{colortab}
 \usepackage{url}
