--- a/macros.tex
+++ b/macros.tex
@@ -85,7 +85,7 @@
 \newcommand{\flam}[1]{\mathtt{lam}~#1}
 \newcommand{\fap}{\mathtt{ap}}
 \newcommand{\farg}{\mathtt{arg}}
-\newcommand{\fnumlit}[1]{\mathtt{numlit}~#1}
+\newcommand{\fnumlit}[1]{\mathtt{lit}~#1}
 \newcommand{\fplus}{\mathtt{plus}}
 \newcommand{\fhole}{\mathtt{hole}}
 
