--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -512,7 +512,7 @@ The rules for relative movement within Z-types are given below and should be sel
     }
   }
 \end{equation}
-\begin{equation}
+\begin{equation}\label{rule:move-parent-arr-right}
   \inferrule{ }{
     \performTyp{
       \tarr{{\htau_1}}{\zwsel{\htau_2}}
@@ -523,7 +523,7 @@ The rules for relative movement within Z-types are given below and should be sel
     }
   }
 \end{equation}
-\begin{equation}
+\begin{equation}\label{rule:move-nextSib-arr}
   \inferrule{ }{
     \performTyp{
       \tarr{\zwsel{\htau_1}}{{\htau_2}}
@@ -629,7 +629,7 @@ For concision, we show only the rules for ascription here:
     }
   }
 \end{equation}
-\begin{equation}
+\begin{equation}\label{rule:move-parent-asc-right}
   \inferrule{ }{
     \performTyp{
       \hexp : \zwsel{\htau}
@@ -1073,7 +1073,7 @@ If the focused hole is being analyzed against a type that is incompatible with $
 \end{equation}
 
 Finally, the $\aConstruct{\fplus}$ action constructs a plus expression with the focused expression as its first argument. If the focused expression synthesizes a type consistent with $\tnum$, then the rule is straightforward:
-\begin{equation}
+\begin{equation}\label{rule:construct-plus-compat}
   \inferrule{
     \tcompat{\htau}{\tnum}
   }{
@@ -1110,7 +1110,6 @@ The final action we will consider in Hazelnut is $\aFinish$, which finishes the 
 If the focused non-empty hole appears in synthetic position, then it can always be finished:
 \begin{subequations}
   \begin{equation}
-    \label{r:finishana}
   \inferrule{
     \hsyn{\hGamma}{\hexp}{\htau'}
   }{
@@ -1125,7 +1124,7 @@ If the focused non-empty hole appears in synthetic position, then it can always 
 \end{equation}
 
 If the focused non-empty hole appears in analytic position, then it can only be finished if the type synthesized for the wrapped expression is consistent with the type the hole is being analyzed against. This amounts to analyzing those contents against the provided type (by subsumption):
-\begin{equation}
+\begin{equation}\label{r:finishana}
   \inferrule{
     \hana{\hGamma}{\hexp}{\htau}
   }{
